Resume content added

--- a/index.html
+++ b/index.html
@@ -62,8 +62,15 @@
 
           <div class="info-content">
             <h1 class="name" title="Atul Anand">Atul Anand</h1>
-
-            <p class="title">Web developer</p>
+            <p class="title">Software Developer</p>
+            <!-- <div class="title-container">
+              <p class="title-onyx">Full-Stack</p>
+              <p class="title-yellow">Student</p>
+              <p class="title-red">UI/UX</p>
+              <p class="title-jet">App development</p>
+              <p class="title-grey">Laravel</p>
+               <p class="title-yellow">MERN</p>
+            </div> -->
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -588,36 +595,60 @@
 
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Full Stack Developer</h4>
+                <h4 class="h4 timeline-item-title">
+                  India Accelarator
+                  <a
+                    href="https://indiaaccelerator.co/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><ion-icon name="link" size="large"></ion-icon
+                  ></a>
+                </h4>
 
-                <span>December 2024 - January 2025</span>
+                <span>Febuary 2024 - May 2025</span>
 
                 <p class="timeline-text">
-                  Nemo enim ipsam voluptatem blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et qvuas molestias
-                  exceptur.
+                  <strong>Served as a Full Stack Web and App Developer</strong>,
+                  where I led the maintenance and enhancement of existing
+                  projects by implementing new features, conducting thorough
+                  testing, and resolving complex bugs. Recognized for
+                  consistently delivering high-quality features within tight
+                  deadlines and ensuring minimal post-deployment issues.
                 </p>
               </li>
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Full Stack & App developer
+                  Xinacle
+                  <a
+                    href="https://xinacle.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><ion-icon name="link" size="large"></ion-icon
+                  ></a>
                 </h4>
 
-                <span>July - December 2024</span>
+                <span>July 2024 - Febuary 2025</span>
 
                 <p class="timeline-text">
-                  I worked as both a full-stack and mobile developer in Xinacle,
-                  delivering numerous projects for multiple clients. I planned
-                  and built these solutions from the ground up, ensuring they
-                  met client needs.
+                  Worked as a
+                  <strong>Full Stack and Mobile Developer at Xinacle</strong>,
+                  where I delivered multiple end-to-end solutions for a diverse
+                  range of clients. I was responsible for everything from UI/UX
+                  design and database schema planning to backend, frontend
+                  development, testing, and debugging. I quickly adapted to new
+                  technologies as required by client projects—often learning and
+                  applying them in record time. Known for building robust
+                  applications from scratch and consistently delivering
+                  high-quality projects ahead of deadlines with full client
+                  satisfaction.
                 </p>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Front-end Developer</h4>
+                <h4 class="h4 timeline-item-title">Shadow start-up</h4>
 
-                <span>June - July 2024</span>
+                <span>June 2024 - July 2024</span>
 
                 <p class="timeline-text">
                   I worked in a shadow startup, contributing to the development
@@ -628,7 +659,7 @@
             </ol>
           </section>
 
-          <section class="skill">
+          <!-- <section class="skill">
             <h3 class="h3 skills-title">My skills</h3>
 
             <ul class="skills-list content-card">
@@ -676,7 +707,7 @@
                 </div>
               </li>
 
-              <!-- <li class="skills-item">
+              <li class="skills-item">
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic design</h5>
@@ -687,9 +718,9 @@
                 <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
-            </li> -->
+            </li>
 
-              <!-- <li class="skills-item">
+              <li class="skills-item">
 
               <div class="title-wrapper">
                 <h5 class="h5">Branding</h5>
@@ -700,7 +731,7 @@
                 <div class="skill-progress-fill" style="width: 90%;"></div>
               </div>
 
-            </li> -->
+            </li>
 
               <li class="skills-item">
                 <div class="title-wrapper">
@@ -713,7 +744,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+          </section> -->
           <li class="service-item" style="margin-top: 20px">
             <div class="service-content-box">
               <h4 class="h4 service-item-title">
