--- a/index.html
+++ b/index.html
@@ -140,20 +140,38 @@
           <div class="separator"></div>
 
           <ul class="social-list">
-            <!-- <li class="social-item">
-              <a href="#" class="social-link">
-                <ion-icon class="socials-icons" name="logo-facebook"></ion-icon>
-              </a>
-            </li> -->
-
             <li class="social-item">
-              <a href="https://github.com/atulj10" class="social-link">
-                <ion-icon class="socials-icons" name="logo-github"></ion-icon>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/atul-anand-a60941262/"
+                class="social-link"
+              >
+                <ion-icon class="socials-icons" name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
               <a
+                target="_blank"
+                href="https://github.com/atulj10"
+                class="social-link"
+              >
+                <ion-icon class="socials-icons" name="logo-github"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://medium.com/@atulj10unofficial"
+                class="social-link"
+              >
+                <ion-icon class="socials-icons" name="logo-medium"></ion-icon>
+              </a>
+            </li>
+
+            <!-- <li class="social-item">
+              <a
+                target="_blank"
                 href="https://www.instagram.com/atulanandj10/?hl=en"
                 class="social-link"
               >
@@ -162,7 +180,7 @@
                   name="logo-instagram"
                 ></ion-icon>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </aside>
