Resume and exprience change

--- a/index.html
+++ b/index.html
@@ -614,6 +614,33 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
+                  Coddle AI
+                  <a
+                    href="https://coddle.ai/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><ion-icon name="link" size="large"></ion-icon
+                  ></a>
+                </h4>
+
+                <span>October 2025 - Present</span>
+
+                <p class="timeline-text">
+                  <strong>Serving as a Full Stack Intern</strong>,
+                  I was responsible for maintaining and developing new features
+                   across the React Native CLI mobile application, consistently
+                    enhancing its functionality and overall user experience. I 
+                    improved and debugged the in-app AI assistant to deliver more 
+                    accurate, reliable, and context-aware support for parents.
+                     Additionally, I owned the complete setup, implementation, 
+                     and maintenance of Detox end-to-end automated tests, which 
+                     significantly increased test coverage and helped prevent 
+                     regressions across the app.
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
                   India Accelarator
                   <a
                     href="https://indiaaccelerator.co/"
